kubernetes/services/media/qbittorrent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  selector: 
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - image: lscr.io/linuxserver/qbittorrent:latest
        name: qbittorrent
        ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          - containerPort: 6881
            name: web-tcp
            protocol: TCP
          - containerPort: 6881
            name: web-udp
            protocol: UDP
        volumeMounts:
          - mountPath: /config
            name: arrstack
          - mountPath: /media
            name: smb
      - image: qmcgaw/gluetun
        name: gluetun
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
        - mountPath: /gluetun
          name: gluetun
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: jellyfin-smb-pvc
        - name: arrstack
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: gluetun
          persistentVolumeClaim:
            claimName: gluetun-pvc
      restartPolicy: Always
