kubernetes/services/media/qbittorrent/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`qbittorrent.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: qbittorrent
      port: 8080
  tls:
    secretName: qbittorrent-certificate-secret
